@@ -24,6 +24,7 @@
 
 #include "ApplicationFeatures/ApplicationServer.h"
 #include "Basics/FileUtils.h"
+#include "Basics/files.h"
 #include "Basics/ScopeGuard.h"
 #include "Basics/StaticStrings.h"
 #include "Basics/StringUtils.h"
@@ -149,6 +150,7 @@ void ExportFeature::validateOptions(std::shared_ptr<options::ProgramOptions> opt
     TRI_ASSERT(_outputDirectory.size() > 0);
     _outputDirectory.pop_back();
   }
+  TRI_NormalizePath(_outputDirectory);
 
   if (_graphName.empty() && _collections.empty() && _query.empty()) {
     LOG_TOPIC("488d8", FATAL, Logger::CONFIG)
