@@ -133,6 +133,12 @@ int TRI_RemoveDirectory(char const* filename);
 int TRI_RemoveDirectoryDeterministic(char const* filename);
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief normalizes path to only use the default directory separator
+////////////////////////////////////////////////////////////////////////////////
+
+void TRI_NormalizePath(std::string& path);
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief extracts the dirname
 ////////////////////////////////////////////////////////////////////////////////
 
