@@ -1,6 +1,11 @@
 v3.7.7 (XXXX-XX-XX)
 -------------------
 
+* Normalize user-provided input/output directory names in arangoimport,
+  arangoexport, arangodump and arangorestore before splitting them into path
+  components, in the sense that now both forward and backward slashes can be
+  used on Windows, even interchangingly.
+
 * Fixed some wrong behaviour in single document updates. If the option
   ignoreRevs=false was given and the precondition _rev was given in the body but
   the _key was given in the URL path, then the rev was wrongly taken as 0,
